--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script data-main="js/main" src="js/libs/external/require.js"></script>
     </head>
     <body>
         <div>Test</div>
