Wechsel von <req> zu nativem <input>

--- a/html/screens/start.htm
+++ b/html/screens/start.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <body>
-        <!--<req type="text/javascript" src="test"></req>-->
+        <!--<input type="hidden" content="text/javascript" value="test" />-->
         Dies ist der Ladebildschirm
     </body>
 </html>
