--- a/html/screens/start.htm
+++ b/html/screens/start.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <body>
-        <!--<input type="hidden" content="text/javascript" value="test" />-->
+        <!--<input type="hidden" content="text/css" value="loading.css" />-->
         Dies ist der Ladebildschirm
     </body>
 </html>
