--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" type="text/css" href="css/fonts.css" />
         <link rel="stylesheet" type="text/css" href="css/loading.css" />
-        <script data-main="js/main" src="js/libs/require.js"></script>
+        <script data-main="js/init" src="js/lib/require.js"></script>
     </head>
     <body>
         <div class="wait-text">Bitte warten...</div>
