--- a/html/screens/start.htm
+++ b/html/screens/start.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <body>
-        <!--<input type="hidden" content="text/css" value="loading.css" />-->
+        <input type="hidden" content="text/javascript" value="controller/MainController" />
         Dies ist der Ladebildschirm
     </body>
 </html>
