--- a/index.html
+++ b/index.html
@@ -9,6 +9,27 @@
         <link rel="stylesheet" type="text/css" href="css/normalize.css" />
         <link rel="stylesheet" type="text/css" href="css/fonts.css" />
         <link rel="stylesheet" type="text/css" href="css/loading.css" />
+        <script>
+            if (typeof (window.navigator.standalone) === 'undefined') {
+                navigator.standalone = navigator.standalone || (screen.height - document.documentElement.clientHeight < 40);
+            }
+
+            window.isMobile = function detectmob() {
+                if (navigator.userAgent.match(/Android/i)
+                        || navigator.userAgent.match(/webOS/i)
+                        || navigator.userAgent.match(/iPhone/i)
+                        || navigator.userAgent.match(/iPad/i)
+                        || navigator.userAgent.match(/iPod/i)
+                        || navigator.userAgent.match(/BlackBerry/i)
+                        || navigator.userAgent.match(/Windows Phone/i)
+                        ) {
+                    return true;
+                }
+                else {
+                    return false;
+                }
+            };
+        </script>
         <script data-main="js/init" src="js/lib/require.js"></script>
     </head>
     <body>
