--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <script data-main="js/init" src="js/lib/require.js"></script>
     </head>
     <body>
-        <div class="wait-text">Bitte warten...</div>
+        <div class="wait-text" style="display: none;">Bitte warten...</div>
     </body>
 </html>
