--- a/html/screens/MixGame.htm
+++ b/html/screens/MixGame.htm
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <body>
-        <input type="hidden" content="text/css" value="base.css" />
+        <input type="hidden" content="text/css" value="color-game.css" />
         <input type="hidden" content="text/javascript" value="controller/MixGameController" />
         
         <div id="canvas">
